--- a/web/style.css
+++ b/web/style.css
@@ -121,10 +121,13 @@ h1{
     background: rgba(215, 165, 211, 0.95);
     color: #ffffff; 
     text-decoration: none; 
-    font-size: 1rem;
+    font-size: 2rem;
     border-radius: 16px; 
     display: inline-block; /* Make sure the button acts as an inline element */
     transition: background-color 0.3s ease;
+    width: 361px;
+    height: 53px;
+    flex-shrink: 0;
 }
 
 .start-btn:hover {
@@ -154,10 +157,8 @@ h1{
 .prompt{
     color: #5A6174;
     text-align: center;
-    font-size: 24px;
-    font-family: "inter-variable",sans-serif;
-    font-variation-settings: 'wght' 400, 'slnt' 0;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
-.example {
-
-  }
