--- a/web/style.css
+++ b/web/style.css
@@ -1,11 +1,14 @@
 /* General body styling */
 body, html {
-    height: 100%; /* Ensure the body takes the full screen */
+    height: 100vh; /* Ensure the body takes the full screen */
     margin: 0;
     padding: 0;
     background-color: #ffffff;
     color: #ffffff;
     font-family: Inter, sans-serif;
+}
+body{
+    overflow: hidden;
 }
 h1{
     color: #FFF;
@@ -24,8 +27,8 @@ h1{
     background-color: #ffffff; /* Header background */
     border-bottom: 1px solid #eaeaea;
     color: #5A6174;
-    position: sticky;
-    top: 0;
+     position: sticky;
+  top: 0;
 }
 
 .title {
@@ -64,6 +67,7 @@ h1{
     justify-content: center; /* Centers items horizontally */
     align-items: stretch; /* Ensures both sections fill the same height */
 }
+
 
 /* Text section styling */
 .text-section {
@@ -126,7 +130,7 @@ h1{
     font-size: 1.5rem;
     text-decoration: none; 
     width: 22.5625rem;
-    height: 2.3125rem;
+    height: 1.8125rem;
     flex-shrink: 0;
     border-radius: 1.65625rem;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -148,7 +152,7 @@ h1{
 }
 
 .icon img {
-    width: 150px; /* Adjust width to resize the image */
+    width: 200px; /* Adjust width to resize the image */
     height: auto; /* Maintain aspect ratio */
 }
 
